[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/UIButton.gd" type="Script" id=1]
[ext_resource path="res://white_pixel.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TextureButton.gd" type="Script" id=3]
[ext_resource path="res://panel.png" type="Texture" id=4]
[ext_resource path="res://PixelFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://select.wav" type="AudioStream" id=6]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

uniform bool inverted = false;
uniform vec4 black : hint_color;
uniform vec4 white : hint_color;

void fragment()
{
	vec4 col = texture(TEXTURE, UV);
	if(inverted && col.a > 0.0)
	{
		vec4 wdif = abs(col - white);
		vec4 bdif = abs(col - black);
		if(max(max(wdif.r, wdif.g), wdif.b) < 0.1)
		{
			col = black;
		}
		if(max(max(bdif.r, bdif.g), bdif.b) < 0.1)
		{
			col = white;
		}
	}
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )
shader_param/inverted = false
shader_param/black = Color( 0.101961, 0.109804, 0.172549, 1 )
shader_param/white = Color( 0.956863, 0.956863, 0.956863, 1 )
_sections_unfolded = [ "Resource", "shader_param" ]

[node name="InvButton" type="Control"]

material = SubResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Pause" ]
text = "Mine!"

[node name="Button" type="TextureButton" parent="." index="0"]

use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 43.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Material" ]
texture = ExtResource( 4 )
draw_center = true
slice_mode = 0
left_slice = 1
right_slice = 1
top_slice = 1
bottom_slice = 1

[node name="Text" type="Label" parent="." index="1"]

modulate = Color( 0.956863, 0.956863, 0.956863, 1 )
use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 2.0
margin_right = 56.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Mine!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Material", "Visibility", "custom_colors", "custom_fonts" ]

[node name="Audio" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]

[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]


